--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
 		
 		<link rel="stylesheet" href="css/cards.css">
 		
+		<link rel="stylesheet" href="css/results.css">
+		
 		<script src="js/header.js" defer></script>
 		
 		<script src="js/home.js" defer></script>
@@ -84,6 +86,41 @@
       <h1>Tecnologia avançada, cuidado que acolhe</h1>
       <p>Equipamentos de última geração e uma equipe preparada para receber você.</p>
       <a href="https://wa.me/5522988240354" class="btn btn-primary">Agendar</a>
+    </div>
+  </section>
+
+    <section class="section results">
+    <div class="container">
+      <div class="section-header">
+        <h1>Resultados</h1>
+      </div>
+      <div class="section-content">
+        <p>Possui uma etiqueta com login e senha para acesso aos resultados de exames?</p>
+        <div class="results-sticker">
+          <div class="results-sticker-content">
+            <div class="results-sticker-header">
+              <img src="img/logo-sticker.svg" alt="Logo da Labex.">
+              <p>ACESSE SEU LAUDO E IMAGENS DO EXAME</p>
+            </div>
+            <div class="results-sticker-info">
+              <div class="results-sticker-text">
+                Nome: FULANO DE TAL<br/>
+                Acesse: www.labeximagem.com<br/>
+                Clique em Resultados de Exames<br/>
+                Login: xNNNNNN<br/>
+                Senha: DDMMAAAA<br/>
+              </div>
+              <div class="results-sticker-qrcode">
+                <img src="img/qr-code.png" alt="QR-Code para o site da Labex.">
+              </div>
+            </div>
+          </div>
+        </div>
+        <p>Clique no botão abaixo para acessar os seus resultados.</p>
+        <div class="section-cta">
+          <a class="btn btn-primary" href="http://pacs.labeximagem.com/">Resultados de Exames</a>
+        </div>
+      </div>
     </div>
   </section>
 
